Print Types
Print Statements
Syntax: print(object,seperator,end,file,flush)
# Expected o/p: hey buddies
print("hey buddies")
print('hey buddies')
hey buddies
hey buddies
# Expected o/p: you're here to learn python
# print('you're here to learn python)

print("you're here to learn python")
you're here to learn python
# Expected o/p: "you are here to learn python"
# print(""you are here to learn python"")
print('"you are here to learn python"')
"you are here to learn python"
# Expected o/p: "you're here to learn python"
# print("you're here to learn python")
print('"you\'re here to learn python"')
"you're here to learn python"
# Expected o/p: 
# welcome 
# to 
# GURUKULA
print("welcome")
print("to")
print("GURUKULA")
print("welcome\nto\nGURUKULA")
welcome
to
GURUKULA
welcome
to
GURUKULA
# Expected o/p:
#                 Name         :     sakthi
#                 Gender       :     Male
print("Name:sakthi\nGender:Male")
print("Name\t:\tsakthi\nGender\t:\tMale")
Name:sakthi
Gender:Male
Name	:	sakthi
Gender	:	Male
# Expected o/p :
# happy learning
# happy_learning
# happy + learning
# happylearning
print("happy","learning") 
print("happy","learning",sep="_")
print("happy","learning",sep=" + ")
print("happy","learning",sep="")
happy learning
happy_learning
happy + learning
happylearning
# Expected o/p:

# use three print statement to get out output welcome to gurukula in a single line.
print("welcome",end=" ")
print("to",end=" ")
print("GURUKULA",end=".")
# welcome to GURUKULA
#     * python series.
#     * Tips and tricks
welcome to GURUKULA.
print("welcome to gurukula",end="\n\t*")
print("python series",end="\n\t*")
print("tips and tricks")
welcome to gurukula
	*python series
	*tips and tricks
♥♥_____♥♥___ Put This ♥_____♥♥_____♥ Heart ♥______♥______♥__ On Your ♥_____/______♥ Page If ♥_________♥ You Had ____♥/♥_____ Your Heart ______♥_♥_______ Broken ________♥_________…………….

print("__♥__♥_____♥__♥___ Put This
_♥_____♥_♥_____♥__ Heart
_♥______♥______♥__ On Your
__♥_____/______♥__ Page If
___♥____\_____♥___ You Had
____♥___/___♥_____ Your Heart
______♥_\_♥_______ Broken
________♥_________…………….")
  File "<ipython-input-49-c2a1c0c8ed38>", line 1
    print("__♥__♥_____♥__♥___ Put This
                                      ^
SyntaxError: EOL while scanning string literal
print("""__♥__♥_____♥__♥___ Put This
_♥_____♥_♥_____♥__ Heart
_♥______♥______♥__ On Your
__♥_____/______♥__ Page If
___♥____\_____♥___ You Had
____♥___/___♥_____ Your Heart
______♥_\_♥_______ Broken
________♥_________…………….
""")
__♥__♥_____♥__♥___ Put This
_♥_____♥_♥_____♥__ Heart
_♥______♥______♥__ On Your
__♥_____/______♥__ Page If
___♥____\_____♥___ You Had
____♥___/___♥_____ Your Heart
______♥_\_♥_______ Broken
________♥_________…………….
